<resources>
    <string name="app_name">Helpify</string>
    <string name="title_activity_maps">Map</string>
    <string name="textUserName">Caption</string>
    <string name="textUserQuest">Description</string>
    <string name="textQuestExpiry">Date</string>
    <string name="textQuestExpiryTime">Time</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_maps_user_click">User details</string>
    <string name="timeGrtWeek">More than a week</string>
    <string name="timeGrtDay">More than a day</string>
    <string name="timeOver">Time over!</string>
    <string-array name="skills_list">
        <item>Physical Strength</item>
        <item>Logical Thinking</item>
        <item>Driving</item>
        <item>Medical help</item>
        <item>Beauty</item>
        <item>Home and Garden </item>
        <item>Renovation</item>
        <item>Mechanics</item>
        <item>Computers</item>

    </string-array>
</resources>
