<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    tools:context="project.helpify.helpifyapp.MyRequestsActivity">

    <LinearLayout
        android:layout_width="334dp"
        android:layout_height="441dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.496">


        <TextView
            android:id="@+id/textViewDataChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:text="HELP REQUEST"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:ems="10"
            android:text="@string/textUserName"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@drawable/forms_shape"
            android:hint="Enter your name"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkText" />

        <TextView
            android:id="@+id/textUserQuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:text="@string/textUserQuest"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextQuest"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="0dp"
            android:height="15sp"
            android:background="@drawable/forms_shape"
            android:ellipsize="start"
            android:hint="Enter a quest"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textColorHint="@color/darkText" />

        <TextView
            android:id="@+id/QuestStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:text="@string/textQuestExpiry"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="20sp"
            android:layout_margin="10dp"
            android:background="@drawable/forms_shape"
            android:ems="10"
            android:hint="Choose date"
            android:inputType="time" />

        <TextView
            android:id="@+id/QuestStartDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:ems="10"
            android:text="@string/textQuestExpiryTime"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_margin="10dp"
            android:background="@drawable/forms_shape"
            android:ems="10"
            android:hint="Choose time"
            android:inputType="time" />

        <Button
            android:id="@+id/SkillsSelect"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/mybutton"
            android:text="Choose skills"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />


        <Button
            android:id="@+id/buttonSaveUserData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/mybutton3"
            android:text="activate request"
            android:textSize="20dp"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="455dp" />




    </LinearLayout>
    <RelativeLayout
        android:layout_width="21dp"
        android:layout_height="643dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">



    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="337dp"
        android:layout_height="47dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="560dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/mybutton"
            android:src="@drawable/ic_back"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteY="455dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="338dp"
        android:layout_height="17dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="560dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp">

        <View
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/textViewOrLogIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="Or"
            android:textAlignment="center"
            android:textColor="@color/darkText"
            android:textSize="15sp" />

        <View
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/black" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>